Alignment issues on top users page

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -271,9 +271,19 @@ ol.userList {
   font-size: 10pt;
 }
 
-ol.userList .userLink {
+ol.userList li:nth-child(n+10) {
+  margin-left: -8px;
+}
+
+ol.userList li .userLink {
   width: 110px;
   display: inline-block;
+}
+
+ol.userList li span {
+  width: 40px;
+  display: inline-block;
+  text-align: right;
 }
 
 .subtext {
